<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_wifi_spot"
    android:title="@string/title_add_spot_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diploma.rodionorets.wifind.AddNewWifiSpotActivity"
    android:orientation="vertical">

    <!--WIFI SERVICE SET IDENTIFIER-->
    <TextView
        android:id="@+id/tv_wifi_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_current_wifi_name"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_wifi_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <!--WIFI LINK SPEED-->
    <TextView
        android:id="@+id/tv_wifi_link_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_link_speed"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_wifi_link_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <!--WIFI USERS NUMBER-->
    <TextView
        android:id="@+id/tv_wifi_users_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_number_of_users"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_wifi_users_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/et_number_of_users_hint"
        android:layout_marginBottom="15dp" />

    <!--WIFI PASSWORD-->
    <TextView
        android:id="@+id/tv_wifi_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_wifi_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_password_hint"
        android:layout_marginBottom="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_add_spot"
        android:text="@string/action_add_spot"
        android:layout_gravity="bottom"/>

</LinearLayout>
